--- a/content/ru/pages/docs/sm30.md
+++ b/content/ru/pages/docs/sm30.md
@@ -13,7 +13,7 @@ tags: ["docs", "sm30"]
 ![image](/images/sm30/sm30_bottom.png)
 1. кнопка BOOT
 2. кнопка RESET
-3. бампоны
+3. силиконовые ножки
 4. вспомогательное окно для разбора корпуса кейпада
 
 ![image](/images/sm30/sm30_top.png)
