--- a/content/ru/pages/docs/sm30.md
+++ b/content/ru/pages/docs/sm30.md
@@ -222,12 +222,48 @@ tags: ["docs", "sm30"]
 - **Снимите кейкап (колпачок клавиши):** используйте свитч-пуллер или специальный съемник для кейкапов
 - **Извлеките старый свитч:** возьмите съемник для переключателей, захватите им защелки сверху и снизу свитча и аккуратно потяните вверх, пока он не выйдет из гнезда.
 
+{{< video 
+    autoplay="true"
+    loop="true"
+    muted="true"
+    src="/video/sm30/switch_out.mp4" 
+>}}
+<br />
+
 ### Установка нового свитча
 - **Установите новый свитч:** убедитесь, что контакты (пины) нового переключателя ровные и правильно совмещены с отверстиями на плате. Аккуратно вставьте его до щелчка.
 - **Верните кейкап на место**
 
+{{< video 
+    autoplay="true"
+    loop="true"
+    muted="true"
+    src="/video/sm30/switch_in.mp4" 
+>}}
+<br />
+
 ### Установка хотсвап-энкодера
 - **Установите хотсвап-энкодер:** убедитесь, что контакты (пины) хотсвап-энкодера правильно совмещены с контактными площадками на плате (контакты энкодера должны быть снизу). Аккуратно вставьте его до щелчка.
+
+{{< video 
+    autoplay="true"
+    loop="true"
+    muted="true"
+    src="/video/sm30/enc_in.mp4" 
+>}}
+<br />
+
+### Извлечение хотсвап-энкодера
+- **Снимите колпачок энкодера:** потяните вверх колпачок
+- **Извлеките энкодер:** возьмите съемник для переключателей, захватите им защелки сверху и снизу энкодера и аккуратно потяните вверх, пока он не выйдет из гнезда.
+
+{{< video 
+    autoplay="true"
+    loop="true"
+    muted="true"
+    src="/video/sm30/enc_out.mp4" 
+>}}
+<br />
 
 ## Перепрошивка/обновление встроенного ПО
 ### Подготовка:
